# XY-GroundStation

./: README.md
firmware/: CMakeLists.txt  CMakePresets.json  ServoState.hpp  lv_conf.h  main.cpp  open-vs-code.cmd  vcpkg-configuration.json
firmware/libs/GUI/: CMakeLists.txt
firmware/libs/actuator/: CMakeLists.txt
firmware/libs/actuator/include/: Actuator.hpp  pico_servo.hpp
firmware/libs/actuator/src/: Actuator.cpp  pico_servo.cpp
firmware/libs/board/: CMakeLists.txt
firmware/libs/board/include/: board_startup.hpp  pin_definitions.hpp
firmware/libs/board/src/: board_startup.cpp
firmware/libs/lcd/: CMakeLists.txt
firmware/libs/lcd/include/: lcd_1in14.hpp
firmware/libs/lcd/src/: lcd_1in14.cpp
firmware/libs/lvgl/: CMakeLists.txt  lvgl.h
firmware/libs/lvgl/env_support/cmake/: custom.cmake
firmware/libs/lvgl/src/core/: lv_obj.c
firmware/libs/lvgl/src/hal/: lv_hal_disp.c
firmware/libs/lvgl/src/themes/default/: lv_theme_default.c
firmware/libs/servo/: CMakeLists.txt  pico_servo.cpp
firmware/libs/servo/include/: pico_servo.hpp
firmware/libs/user_interface/: CMakeLists.txt
firmware/libs/user_interface/include/: DirectServoModeScreen.hpp  KeypadKey.hpp  MainScreen.hpp  ManualModeScreen.hpp  SettingsScreen.hpp  UserInterface.hpp  user_interface.hpp
firmware/libs/user_interface/src/: DirectServoModeScreen.cpp  MainScreen.cpp  ManualModeScreen.cpp  SettingsScreen.cpp  UserInterface.cpp  user_interface.cpp
